--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
 	"require": {
 		"arthurhoaro/favicon": "^1.2",
 		"cerdic/css-tidy": "v1.7.1",
-		"christophwurst/kitinerary": "0.1.0",
-		"christophwurst/kitinerary-bin": "0.1.6",
-		"christophwurst/kitinerary-flatpak": "0.1.2",
+		"christophwurst/kitinerary": "^0.2",
+		"christophwurst/kitinerary-bin": "^0.2",
+		"christophwurst/kitinerary-flatpak": "^0.2",
 		"ezyang/htmlpurifier": "4.12.0",
 		"gravatarphp/gravatar": "^2.0",
 		"kwi/urllinker": "dev-bleeding",
